--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#6FFFE9">
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400np|Shadows+Into+Light" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400np" rel="stylesheet">
     <script src="https://use.fontawesome.com/ac8e8f2784.js"></script>
     
     
